Bug 820143 - implemented Calling Line Identification (CLI)