dom/bluetooth/BluetoothHfpManager.h
@@ -34,7 +34,8 @@ public:
                         const char* aNumber, bool aIsActive);
   void EnumerateCallState(int aCallIndex, int aCallState,
                           const char* aNumber, bool aIsActive);
-  void SetupCIND(int aCallIndex, int aCallState, bool aInitial);
+  void SetupCIND(int aCallIndex, int aCallState,
+                 const char* aPhoneNumber, bool aInitial);
   bool Listen();
   void SetVolume(int aVolume);
 
@@ -54,7 +55,9 @@ private:
   int mCurrentVgs;
   int mCurrentCallIndex;
   bool mReceiveVgsFlag;
+  bool mCLIP;
   nsString mDevicePath;
+  nsCString mIncomingCallPhoneNumber;
   enum mozilla::ipc::SocketConnectionStatus mSocketStatus;
   nsTArray<int> mCurrentCallStateArray;
   nsAutoPtr<BluetoothRilListener> mListener;
