dom/bluetooth/BluetoothUtils.h
@@ -8,6 +8,7 @@
 #define mozilla_dom_bluetooth_bluetoothutils_h__
 
 #include "BluetoothCommon.h"
+#include "nsTArray.h"
 
 struct JSContext;
 struct JSObject;
@@ -38,6 +39,10 @@ void
 DispatchBluetoothReply(BluetoothReplyRunnable* aRunnable,
                        const BluetoothValue& aValue,
                        const nsAString& aErrorStr);
+
+void
+AtCommandParser(const nsACString& aAtCommand, int aStart,
+                nsTArray<nsCString>& aRetValues);
 
 END_BLUETOOTH_NAMESPACE
 
